# JejuNow

./: .gitignore  .mcp.json  BUILD_PLAN.md  FABLE_TASKS.md  PROGRESS.md  README.md  collect_datalab.py  jejunow_proposal_v2.docx  pyproject.toml  railway.toml  render.yaml
.github/workflows/: collect-spots.yml  ios-build.yml  ka-test.yml  keepalive.yml  precompute.yml
api/: Dockerfile  __init__.py  deps.py  main.py  schemas.py
api/collectors/: __init__.py  backfill_homepage.py  backfill_overview.py  backfill_route_coords.py  collect_spots.py  collect_weather.py  load_datalab.py
api/core/: __init__.py  config.py  http.py  supabase.py
api/routes/: __init__.py  alternatives.py  congestion.py  keepalive.py  route.py  simulate.py  spots.py
app/: capacitor.config.ts  next.config.ts  package-lock.json  package.json
app/scripts/: autoplan-sim.mts
app/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/src/components/: AutoPlanFlow.tsx  BottomNav.tsx  CoachMark.tsx  DetailDismiss.tsx  FeatureCourseCard.tsx  LevelBadge.tsx  MapView.tsx  MyPlanCard.tsx  OnboardingGate.tsx  OnboardingPlanner.tsx  (+13 more)
data/: opening_hours_snapshot.csv
db/: spot_name_map.csv
db/migrations/: 0001_init.sql  0002_congestion_pred_is_imputed.sql  0003_congestion_pred_date_hour_idx.sql  0004_spots_overview_tel.sql  0005_spots_route_coords.sql  0006_spots_homepage.sql
ml/: __init__.py  data.py  features.py  inference.py  precompute.py  profile.py  train.py
ml/artifacts/: feature_meta.json  metrics.json  model.txt
scripts/: deploy_vercel.ps1
store-assets/: LISTING.md
(+27 files in other folders)
